fix: gap & border image

--- a/client/src/components/ActivityForm/ActivityForm.css
+++ b/client/src/components/ActivityForm/ActivityForm.css
@@ -3,11 +3,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
 }
 
 .file-upload-container {
-  border: 1px dashed var(--primary-color);
   width: 90%;
   height: 40vh;
   display: flex;
